--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context=".MainActivity">
+    tools:context=".RecordActivity">
 
     <Button
         android:id="@+id/startButton"
@@ -19,6 +19,11 @@
         android:layout_marginEnd="26dp"
         android:layout_marginBottom="26dp"
         android:text="Start Recording" />
+
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/google_signIn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/resultTextView"
